updated formating for website plots

--- a/checkpoint3/website/project_home.html
+++ b/checkpoint3/website/project_home.html
@@ -2677,22 +2677,30 @@ plot_spectrogram_comparison(df, label1="yes", label2="no", sr=SAMPLE_RATE, n_exa
     </div>
 
     <div class="slide-content" style="display: block;">
-      <iframe src="clarity/images/comparison_spectrograms/comparison_yes_vs_no_sample1.html" alt="Yes Vs No Sample 1"></iframe>
+      <div class="plot-container">
+        <iframe src="clarity/images/comparison_spectrograms/comparison_yes_vs_no_sample1.html" alt="Yes Vs No Sample 1"></iframe>
+      </div>
       <!-- <img src="clarity/images/YesVsNoSample1.png" alt="Yes Vs No Sample 1"> -->
     </div>
 
     <div class="slide-content" style="display: block; zoom: 0.1%; visibility: hidden;">
-      <iframe src="clarity/images/comparison_spectrograms/comparison_yes_vs_no_sample2.html" alt="Yes Vs No Sample 2"></iframe>
+      <div class="plot-container">
+        <iframe src="clarity/images/comparison_spectrograms/comparison_yes_vs_no_sample2.html" alt="Yes Vs No Sample 2"></iframe>
+      </div>
       <!-- <img src="clarity/images/YesVsNoSample2.png" alt="Yes Vs No Sample 2"> -->
     </div>
 
     <div class="slide-content" style="display: block; zoom: 0.1%; visibility: hidden;">
-      <iframe src="clarity/images/comparison_spectrograms/comparison_yes_vs_no_sample3.html" alt="Yes Vs No Sample 3"></iframe>
+      <div class="plot-container">
+        <iframe src="clarity/images/comparison_spectrograms/comparison_yes_vs_no_sample3.html" alt="Yes Vs No Sample 3"></iframe>
+      </div>
       <!-- <img src="clarity/images/YesVsNoSample3.png" alt="Yes Vs No Sample 3"> -->
     </div>
 
     <div class="slide-content" style="display: block; zoom: 0.1%; visibility: hidden;">
-      <iframe src="clarity/images/comparison_spectrograms/comparison_yes_vs_no_sample4.html" alt="Yes Vs No Sample 4"></iframe>
+      <div class="plot-container">
+        <iframe src="clarity/images/comparison_spectrograms/comparison_yes_vs_no_sample4.html" alt="Yes Vs No Sample 4"></iframe>
+      </div>
       <!-- <img src="clarity/images/YesVsNoSample4.png" alt="Yes Vs No Sample 4"> -->
     </div>
 
