added plot-container to label dist plot

--- a/checkpoint3/website/project_home.html
+++ b/checkpoint3/website/project_home.html
@@ -1289,8 +1289,11 @@ label_counts.describe()
   </details>
 </div>
 
-<div class="container blog main">
-  <iframe src="clarity/images/label_distribution.html"></iframe>
+<div class="container blog large">
+
+  <div class="plot-container">
+    <iframe src="clarity/images/label_distribution.html"></iframe>
+  </div>
 
   <p class="text">
     Let us examine the distribution of labels by each participant:
