updated website plots

--- a/checkpoint3/website/project_home.html
+++ b/checkpoint3/website/project_home.html
@@ -4036,14 +4036,14 @@ print(f"Balanced data shape: {balanced_df.shape}")
     <div class="slide-content" style="display: block; zoom: 0.1%; visibility: hidden;">
       <div class="plot-container">
         <!-- <h4>3D PCA</h4> -->
-        <iframe src="clarity/images/pca_3d.html"></iframe>
+        <iframe src="clarity/images/projection_outputs/PCA_kmeans_clustering_3d_interactive.html"></iframe>
       </div>
     </div>
 
     <div class="slide-content" style="display: block; zoom: 0.1%; visibility: hidden;">
       <div class="plot-container">
         <!-- <h4>3D UMAP</h4> -->
-        <iframe src="clarity/images/umap_3d.html"></iframe>
+        <iframe src="clarity/images/projection_outputs/UMAP_kmeans_clustering_3d_interactive.html"></iframe>
       </div>
     </div>
     <p class="caption">
