added project poster

--- a/checkpoint3/website/project_home.html
+++ b/checkpoint3/website/project_home.html
@@ -163,17 +163,7 @@
         <p>Spring 2025 Data Science Project</p>
         <p class="author">Vishesh Narayan, Shivam Amin, Deval Bansal, Eric Yao, Eshan Khan</p>
         <p class="abstract">
-          This project explores the use of machine learning to classify non-verbal vocalizations from autistic
-          individuals into expressive intent categories (e.g., “yes”, “no”, “frustrated”, “delighted”). We develop a
-          preprocessing pipeline to clean raw audio, extract acoustic features (pitch, MFCCs, spectral entropy), and
-          generate normalized Mel spectrograms. Statistical analysis confirms that these features vary meaningfully
-          across intent labels, motivating their use for supervised classification.
-
-          We experiment with classical models (logistic regression, random forests) and deep learning architectures
-          (CNNs, attention-based models) to assess classification performance and interpretability. The tutorial
-          provides a reproducible walkthrough from data preparation to model evaluation, with a supplemental PDF
-          detailing our exploratory data analysis. Our goal is to contribute toward tools that help decode
-          communicative intent in nonverbal autism contexts.
+          This project applies machine learning to classify non-verbal vocalizations from autistic individuals into expressive intent categories (e.g., “yes”, “no”, “frustrated”, “delighted”). We develop a preprocessing pipeline to clean audio, extract acoustic features (pitch, MFCCs, spectral entropy), and generate normalized Mel spectrograms. Statistical analysis confirms that these features vary meaningfully across labels, supporting their use in supervised learning. We evaluate classical models (K-means, Hierachal Ensemble of SVMs) and deep learning approaches (CNNs, attention-based models) for classification accuracy and interpretability. The tutorial offers a reproducible workflow from preprocessing to evaluation, aiming to support tools that decode communicative intent in nonverbal autism.
         </p>
 
       </div>
@@ -188,7 +178,7 @@
     </div>
 
     <div class="blog-cover">
-      <img class="foreground" src="assets/figures/clarity.png">
+      <img class="foreground" src="clarity/images/project_poster.png">
       <img class="background" src="assets/figures/clarity.png">
     </div>
   </div>
