fixed scaling of SVM graphs in slideshow

--- a/checkpoint3/website/project_home.html
+++ b/checkpoint3/website/project_home.html
@@ -1351,7 +1351,7 @@ for participant_id in participant_ids:
     </div>
     <div class="slider">
       <div class="slider-item">
-        <img src="clarity/images/participant_barplots/participant_P01.png" style="max-width: 100%; max-height: 100%;"  alt="P01 Label Distribution"></i>
+        <img src="clarity/images/participant_barplots/participant_P01.png" alt="P01 Label Distribution"></i>
       </div>
       <div class="slider-item">
         <img src="clarity/images/participant_barplots/participant_P02.png" alt="P02 Label Distribution"></img>
@@ -4741,28 +4741,28 @@ print("="*50)
       </div>
     </div>
 
-    <div class="slide-content" style="display: block; zoom: 0.1%; visibility: hidden;">
+    <div class="slide-content" style="display: block; width: 0.1px; height: 0.1px; visibility: hidden;">
       <div class="plot-container">
         <!-- <h4>3D PCA</h4> -->
         <img src="clarity/images/classifier_pics/best_feature_f1_scores.png" alt="Best Feature F1 Scores">
       </div>
     </div>
 
-    <div class="slide-content" style="display: block; zoom: 0.1%; visibility: hidden;">
+    <div class="slide-content" style="display: block; width: 0.1px; height: 0.1px; visibility: hidden;">
       <div class="plot-container">
         <!-- <h4>3D UMAP</h4> -->
         <img src="clarity/images/classifier_pics/svm_with_mfcc_9_metrics_by_class.png" alt="Best Feature F1 Scores">
       </div>
     </div>
     
-    <div class="slide-content" style="display: block; zoom: 0.1%; visibility: hidden;">
+    <div class="slide-content" style="display: block; width: 0.1px; height: 0.1px; visibility: hidden;">
       <div class="plot-container">
         <!-- <h4>3D UMAP</h4> -->
         <img src="clarity/images/classifier_pics/svm_with_mfcc_9_norm_confusion_matrix.png" alt="Best Feature F1 Scores">
       </div>
     </div>
     
-    <div class="slide-content" style="display: block; zoom: 0.1%; visibility: hidden;">
+    <div class="slide-content" style="display: block; width: 0.1px; height: 0.1px; visibility: hidden;">
       <div class="plot-container">
         <!-- <h4>3D UMAP</h4> -->
         <img src="clarity/images/classifier_pics/svm_with_mfcc_9_top_errors.png" alt="Best Feature F1 Scores">
